# lib2d

./: .hgignore  CMakeLists.txt  README  setup.py
examples/: CMakeLists.txt  demo.c  demo.py  effects.c  lotsofsprites.c  lotsofsprites.py  pyglet_example.py  sprite_sequence_example.py
include/: lib2d.h
lib2d/: __init__.py  finalizer.py
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: premultiplyalpha.py
src/: anim.c  atlas.c  atlas.h  atlas_bank.c  atlas_bank.h  effect.c  effect.h  gl.h  gl_core_3_3.c  gl_core_3_3.h  ident.c  image_bank.c  image_bank.h  matrix.c  nine_patch.c  nine_patch.h  primitives.h  python.c  quaternion.c  render_api.h  renderer.c  renderer.h  renderer_gl.c  resources.c  resources.h  scene.c  scene.h  siphash.c  site.c  sprite.c  stb_image.c  stretchy_buffer.h  target.c  target.h  template.c  template.h
